# richard

./: README.md  install_fast_stt.sh  test_group_chat_fix.py  test_messages_db.py  test_nideesh_fix.py  test_richard_messaging.py  test_stt.py  test_whisper_direct.py  voice_cli.py  voice_test.py
app/: memory.db  oauth.db
apps/menubar/: Info.plist  Package.swift
config/: .env.example  persona.yaml
mac_messages_mcp/: .gitignore  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  main.py  pyproject.toml  test_fuzzy_matching.py  test_message_send.py
mac_messages_mcp/.github/workflows/: publish.yml
mac_messages_mcp/mac_messages_mcp/: messages.py  server.py
mac_messages_mcp/memory-bank/: activecontext.md  productcontext.md  progress.md  projectbrief.md  systempatterns.md  techcontext.md
mac_messages_mcp/scripts/: bump_version.py
mac_messages_mcp/tests/: __init__.py  test_integration.py  test_messages.py
mcp-servers/: .env.example  README.md  SECURITY.md  TESTING_GUIDE.md  config.json  load_orchestrator_env.py  mcp_client_example.py  package-lock.json  package.json  richard_mcp_config.json  run_server.py  security_report.json  setup.py  setup_security.py  start-all.py  test_mcp_servers.py  test_servers.py  test_specific_tools.py  test_startup.py  test_tools.py  validate_security.py  validate_setup.py
mcp-servers/browser/: README.md  config.json  server.py  test_browser.py
mcp-servers/gmail/: gmail_client.py  requirements.txt  server.py
mcp-servers/google-search/: google_search_client.py  requirements.txt  server.py
mcp-servers/notion/: notion_api_client.py  requirements.txt  server.py
mcp-servers/security/: __init__.py  auth.py  config.yaml  crypto.py  middleware.py  test_security.py  tls_config.py  validation.py  (+1 more)
services/orchestrator/: .env  pyproject.toml  requirements.txt  setup_gmail_auth.py  setup_stt.py
services/orchestrator/app/: main.py  memory.db  oauth.db
services/orchestrator/app/llm/: lmstudio_client.py  ollama_client.py  router.py
services/orchestrator/app/memory/: sqlite_store.py
services/orchestrator/app/personality/: __init__.py  learner.py
services/orchestrator/app/routes/: calendar.py  contacts.py  imessage.py  llm.py  mcp.py  memory.py  notion.py  oauth.py  search.py  voice.py
services/orchestrator/app/services/: contacts_service.py  gmail_service.py  token_store.py
services/orchestrator/app/stt/: __init__.py  local_stt.py  macos_speech.py
services/orchestrator/app/voice/: __init__.py  voice_engine.py
services/orchestrator/richard_orchestrator.egg-info/: SOURCES.txt  requires.txt
services/orchestrator/scripts/: gmail_upsert.py
services/orchestrator/services/orchestrator/app/: memory.db
(+845 files in other folders)
